# inventory-service

./: .dockerignore  .env.deploy  .env.example  .env.local  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  run_inventory_reservation_consumer.py  sonar-project.properties
.agent/skills/hotel-code-quality/: SKILL.md
.agent/skills/hotel-git-commit/: SKILL.md
.agent/skills/hotel-pr-convention/: SKILL.md
.agent/skills/hotel-testing-convention/: SKILL.md
.atl/: skill-registry.md
.github/: pull_request_template.md
.github/workflows/: auto-merge-pr.yml  deploy.yml  promote-to-main.yml  python-quality.yml  sonar.yml
alembic/: env.py
alembic/versions/: 20260423_000001_create_rooms_tables.py  20260423_000002_add_booking_id_to_room_availability.py
docs/: git-workflow.md  service-overview.md  service_overview.md  sonarcloud.md
docs/ddd/: README.md  context-map.md  customer-context.md  overview.md  subdomains.md  ubiquitous-language.md
docs/ddd/bounded-contexts/: booking.md  customer.md  inventory.md  payment.md
docs/services/: README.md  customer-service.md  integration-map.md
internal/application/: errors.py
internal/application/commands/: register_room.py  release_rooms.py  reserve_rooms.py  update_room_status.py
internal/domain/: errors.py
openspec/: config.yaml
test/contract/: test_get_all_rooms.py  test_get_room_by_id.py  test_get_rooms.py  test_health.py  test_inventory_booking_messages.py  test_patch_room_status.py  test_post_rooms.py  test_unsupported_capabilities.py
(+73 files in other folders)
