[project]
name = "inventory-service"
version = "0.1.0"
description = "Inventory service bootstrap for hotel-ddd"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "cryptography>=44.0.0,<45.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pika>=1.3.2,<2.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "PyMySQL>=1.1.1,<2.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[tool.fastapi]
entrypoint = "main:app"

[dependency-groups]
dev = [
  "black>=25.1.0,<26.0.0",
  "pyright>=1.1.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.11.0,<0.12.0",
  "testcontainers>=4.13.2,<5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pyright]
include = ["internal", "main.py", "test"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
